Fix input alignment issue on mobile devices

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -180,6 +180,11 @@ footer a:hover {
     font-size: 13px;
   }
 }
+.search-container {
+  display: flex;
+  align-items: center;
+}
+
 #search {
   border: none;
   width: 200px;
@@ -195,7 +200,6 @@ footer a:hover {
 #search-icon {
   position: relative;
   font-size: 23px;
-  top: 5px;
   right: 33px;
 }
 #search-icon:hover {
@@ -206,8 +210,7 @@ footer a:hover {
 #location-icon {
   position: relative;
   font-size: 23px;
-  top: 6px;
-  right: 21px;
+  right: 15px;
 }
 #location-icon:hover {
   color: #dae5ef;
